Fix alignment of guess area by removing unnecessary align-items property

--- a/guess.css
+++ b/guess.css
@@ -42,7 +42,6 @@ h1 {
     .guess-area {
       display: flex;
       flex-direction: column;
-      align-items: start;
       .inputs {
         > div {
           margin-bottom: 15px;
@@ -195,5 +194,9 @@ footer {
     flex-direction: column;
     width: auto;
     margin: 20px 10px 80px ;
+
+    .guess-area {
+      
+    }
   }
 }
